--- a/styles.css
+++ b/styles.css
@@ -371,8 +371,8 @@ ul li a:hover:after {
 @media only screen and (max-width: 768px){
 
   body {
-    /* font-size: calc(1.5rem + ((1vw - 4.8px) * 1.1111)); */
-    font-size: 1.3vw;
+    font-size: calc(2rem + ((1vw - 4.8px) * 1.1111));
+    /* font-size: 1.3vw; */
   }
 
   .toggle-nav .hamburger {
