--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ h1, h2, h3, h4, h5 {
 }
 
 p {
+  font-family: helvetica, arial, sans-serif;
+  font-weight: lighter;
   vertical-align: middle;
 }
 
