--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5 {
 
 p {
   font-family: helvetica, arial, sans-serif;
-  font-weight: lighter;
+  font-weight: 300;
   vertical-align: middle;
 }
 
