--- a/styles.css
+++ b/styles.css
@@ -401,9 +401,9 @@ html {
     height: 40px;
   }
 
-  .hamburger:hover {
+  /* .hamburger:hover {
     cursor: pointer;
-  }
+  } */
 
   nav li {
     display: block;
@@ -432,11 +432,11 @@ html {
     display: none;
   }
 
-  ul li a:hover:after {
+  /* ul li a:hover:after {
     transform: translateX(-50%);
     width: 50%;
     transition: .5s;
-  }
+  } */
 
   button {
     font-size: 1.8rem;
