--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,8 @@ nav.sticky {
   font-family: helvetica;
   font-weight: 300;
   font-size: 0.85rem;
+  padding: 0;
+  margin: 0;
 }
 
 .sans-bold {
