--- a/styles.css
+++ b/styles.css
@@ -446,7 +446,9 @@ html {
     display: none;
   }
 
-
+ #osNoivos{
+   padding-bottom: 2%;
+ }
   /* ul li a:hover:after {
     transform: translateX(-50%);
     width: 50%;
@@ -470,8 +472,17 @@ html {
     max-height: 10%;
   }
 
+  h4 {
+    font-size: 2rem;
+  }
+
+  .subtitle {
+    font-size: 1.5rem;
+    font-weight: normal;
+  }
+
   .sans {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
 
 }
