--- a/styles.css
+++ b/styles.css
@@ -465,6 +465,10 @@ html {
     transition: .5s;
   } */
 
+  #img-sobrenos {
+    max-width: 80%;
+  }
+
 }
 
 @media only screen and (max-width: 574px) {
