--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ nav a {
   text-decoration: none;
   display: flex;
   font-family: helvetica, sans-serif;
-  font-weight: lighter;
+  font-weight: 300;
 }
 
 
