--- a/styles.css
+++ b/styles.css
@@ -197,9 +197,9 @@ nav.sticky {
   margin: 0 auto;
 }
 
-#main-cover {
+/* #main-cover {
   max-width: 100%;
-}
+} */
 
 #maintext {
     margin: 0 auto;
