adjusting font-size issues with bootstrap

--- a/styles.css
+++ b/styles.css
@@ -245,16 +245,16 @@ nav.sticky {
   color: white;
 }
 
-/* .btn_presente:hover {
+.btn_presente:hover {
   background-color: #6c7b52;
   font-weight: 350;
-} */
+}
 
-/* .btn_presente:active {
+.btn_presente:active {
   background-color: #6c7b52;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
-} */
+}
 
 .secondaryCover {
   max-width: 100%;
@@ -291,7 +291,7 @@ nav.sticky {
 
 
 #span-footer {
-  font-size: 0.8rem;
+  font-size: 60%;
   font-weight: 400;
   background-color: rgb(255,255,255, 0.8);
   border-radius: 0.25rem;
@@ -301,11 +301,11 @@ nav.sticky {
 
 
 /* -------------- media queries ----------------- */
-@media only screen and (min-width: 1500px) {
+@media only screen and (min-width: 1431px) {
 
-html {
-    font-size: 18px;
-}
+  #span-footer {
+    font-size: 0.5rem !important;
+  }
 
 }
 
@@ -322,7 +322,7 @@ html {
   #oCasamento {
     display: grid;
     background: url("assets/icons/pattern-1-big.png") no-repeat center center;
-    width: 100%;
+    position: relative;
   }
 
   #mainImg {
@@ -332,10 +332,6 @@ html {
 }
 
 @media only screen and (min-width: 1400px) and (max-width: 1930px) {
-  body {
-    /* margin: 0;
-    padding: 0; */
-  }
 
   #logo {
     width: 55%;
@@ -352,11 +348,6 @@ html {
 }
 
 @media only screen and (min-width: 1931px) {
-  body {
-    /* padding-left: 16%;
-    padding-right: 16%; */
-
-  }
 
   #portico {
     width: 110%;;
@@ -376,7 +367,6 @@ html {
 
   body {
     font-size: calc(2rem + ((1vw - 4.8px) * 1.1111));
-    /* font-size: 1.3vw; */
   }
 
   .toggle-nav .hamburger {
@@ -436,10 +426,6 @@ html {
     display: none;
   }
 
- /* #osNoivos{
-   padding-bottom: 3%;
- } */
-
  #oCasamento {
    padding-right: 0;
    padding-left: 0;
@@ -449,11 +435,6 @@ html {
    padding-right: 0;
    padding-left: 0;
  }
-  /* ul li a:hover:after {
-    transform: translateX(-50%);
-    width: 50%;
-    transition: .5s;
-  } */
 
   #img-sobrenos {
     max-width: 80%;
@@ -533,11 +514,6 @@ html {
     width: 30%;
   }
 
-  /* #gift {
-    width: 55%;
-    padding: 5%;
-  } */
-
   #footer {
     background: url("assets/icons/Untitled-2.png") no-repeat center center;
   }
@@ -546,10 +522,6 @@ html {
     padding-left: 35%;
     padding-right: 35%;
   }
-
-  /* .text-small {
-    font-size: 0.85em;
-  } */
 
   #portico {
     width: 25%;
@@ -562,12 +534,6 @@ html {
     width: 70%;
   }
 }
-
-/* @media only screen and (max-width: 1240px) and (min-width: 769px) {
-    #cover {
-      max-height: 90%;
-    }
-} */
 
 @media only screen and (max-width: 767px) and (min-width: 430px) {
   #calendar {
@@ -591,11 +557,6 @@ html {
     max-width: 45%;
   }
 
-  /* #gift {
-    width: 55%;
-    padding: 5%;
-  } */
-
   #logo {
     width: 40%;
 
@@ -613,10 +574,6 @@ html {
     padding-left: 35%;
     padding-right: 35%;
   }
-
-  /* .text-small {
-    font-size: 0.8em;
-  } */
 
   #sobreNos h1 {
     padding-bottom: 4%;
