--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ html {
   font-size: calc(0.55rem + (1vw - 4.8px) * 1.1111);
   margin: 0 auto;
   font-family: helvetica, arial, sans-serif;
-  scroll-behavior: smooth;
   padding-top: 0;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+
 }
 
 body {
@@ -32,6 +34,7 @@ p {
   font-weight: 300;
   vertical-align: middle;
 }
+
 
 /* NAVBAR */
 
@@ -64,31 +67,6 @@ ul li a {
   text-decoration: none;
   color: black;
   position: relative;
-}
-
-ul li a:before {
-  position: absolute;
-  content: '';
-  top: 100%;
-  left: 0;
-  height: 2px;
-  width: 0%;
-}
-
-ul li a:after {
-  position: absolute;
-  content: '';
-  top: 100%;
-  right: 0;
-  height: 2px;
-  width: 0;
-  background: #c95f81;
-}
-
-ul li a:hover:after {
-  /* transform: translateX(-50%); */
-  width: 100%;
-  transition: .5s;
 }
 
 nav.sticky {
@@ -205,10 +183,6 @@ nav.sticky {
   margin: 0 auto;
 }
 
-/* #main-cover {
-  max-width: 100%;
-} */
-
 #maintext {
     margin: 0 auto;
 }
@@ -269,10 +243,6 @@ nav.sticky {
 .secondaryCover {
   max-width: 100%;
   max-height: 90%;
-}
-
-.color_pallette {
-  max-width: 40%;
 }
 
 #saudacao_padrinhos {
@@ -348,7 +318,7 @@ nav.sticky {
   }
 
   #calendar {
-    width: 80%;
+    width: 70%;
   }
 
 }
@@ -369,6 +339,47 @@ nav.sticky {
 
 }
 
+@media only screen and (min-width: 769px) and (max-width: 2000px) {
+
+body {
+  font-size: calc(0.5rem + ((1vw - 4.8px) * 1.1111));
+}
+
+}
+
+@media only screen and (min-width: 769px){
+
+
+  #color_pallette {
+    max-width: 40%;
+  }
+
+  ul li a:before {
+    position: absolute;
+    content: '';
+    top: 100%;
+    left: 0;
+    height: 2px;
+    width: 0%;
+  }
+
+  ul li a:after {
+    position: absolute;
+    content: '';
+    top: 100%;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: #c95f81;
+  }
+
+  ul li a:hover:after {
+    /* transform: translateX(-50%); */
+    width: 100%;
+    transition: .5s;
+  }
+}
+
 @media only screen and (max-width: 768px){
 
   html, body {
@@ -378,6 +389,22 @@ nav.sticky {
 
   body {
     font-size: calc(2.4rem + ((1vw - 4.8px) * 1.1111));
+  }
+
+  #saudacao_padrinhos {
+    font-size: 4rem;
+  }
+
+  h1 {
+    font-size: 5rem;
+  }
+
+  h2 {
+    font-size: 4.5rem;
+  }
+
+  h4 {
+    font-size: 3rem;
   }
 
   .toggle-nav .hamburger {
@@ -399,7 +426,7 @@ nav.sticky {
     box-shadow: 0 3px #999;
     border: 0;
     color: white;
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .btn_presente:hover {
@@ -423,8 +450,9 @@ nav.sticky {
 
   nav a {
     width: 100%;
-    display: block;
+    display: inline-block;
     text-align: center;
+    font-size: 2rem;
   }
 
   ul {
@@ -434,6 +462,11 @@ nav.sticky {
 
   nav ul {
     display: none;
+  }
+
+  ul li a:hover:after {
+    width: 100%;
+    transition: 0s;
   }
 
  #oCasamento {
@@ -456,20 +489,22 @@ nav.sticky {
   }
 
   #calendar {
-    width: 50%;
+    width: 70%;
+  }
+
+  #color_pallette {
+    width: 90%;
   }
 
   #span-footer {
     font-size: 1rem;
   }
 
+
 }
 
 @media only screen and (max-width: 574px) {
 
-  #logo {
-    padding: 1%;
-  }
 
   ul {
     text-align: center;
@@ -492,10 +527,6 @@ nav.sticky {
   .sans {
     font-size: 1.2rem;
   }
-
-  /* .hamburguer{
-    padding-top: 3%;
-  } */
 
 }
 
@@ -541,16 +572,6 @@ nav.sticky {
 @media only screen and (max-width: 1399px) and (min-width: 768px) {
   #calendar {
     width: 70%;
-  }
-}
-
-@media only screen and (max-width: 767px) and (min-width: 430px) {
-  #calendar {
-    width: 30%;
-  }
-
-  #portico {
-    width: 25%;
   }
 }
 
