--- a/styles.css
+++ b/styles.css
@@ -392,7 +392,7 @@ body {
   }
 
   body {
-    font-size: calc(2.4rem + ((1vw - 4.8px) * 1.1111));
+    font-size: calc(1rem + ((1vw - 4.8px) * 1.1111));
   }
 
   #saudacao_padrinhos {
@@ -400,7 +400,7 @@ body {
   }
 
   h1 {
-    font-size: 5rem;
+    font-size: 3rem;
   }
 
   h2 {
@@ -408,7 +408,7 @@ body {
   }
 
   h4 {
-    font-size: 3rem;
+    font-size: 1.5rem;
   }
 
   .toggle-nav .hamburger {
@@ -430,7 +430,7 @@ body {
     box-shadow: 0 6px #999;
     border: 0;
     color: white;
-    font-size: 2rem;
+    font-size: 1.2rem;
     padding: 1rem;
   }
 
@@ -485,12 +485,11 @@ body {
  }
 
   #img-sobrenos {
-    max-width: 90%;
+    max-width: 100%;
   }
 
   #gift {
-    max-width: 70%;
-    padding: 5%;
+    max-width: 120%;
   }
 
   #calendar {
@@ -562,6 +561,10 @@ body {
 
   #portico {
     width: 25%;
+  }
+
+  #gift {
+    max-width: 30%;
   }
 
 }
